--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ Flask-WhooshAlchemy==0.56
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+nose==1.3.7
 pbr==3.1.1
+py==1.4.34
 python-openid==2.2.5
 six==1.10.0
 SQLAlchemy==1.1.11
