--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 blinker==1.4
+certifi==2017.4.17
+chardet==3.0.4
 click==6.7
 coverage==4.4.1
 decorator==4.1.1
@@ -8,6 +10,7 @@ Flask-Mail==0.9.1
 Flask-OpenID==1.2.5
 Flask-SQLAlchemy==2.2
 Flask-WhooshAlchemy==0.56
+idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
@@ -15,10 +18,12 @@ nose==1.3.7
 pbr==3.1.1
 py==1.4.34
 python-openid==2.2.5
+requests==2.18.1
 six==1.10.0
 SQLAlchemy==1.1.11
 sqlalchemy-migrate==0.11.0
 sqlparse==0.2.3
 Tempita==0.5.2
+urllib3==1.21.1
 Werkzeug==0.12.2
 Whoosh==2.7.4
